# deepseek-rust-cli

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  check.sh  config.json  deny.toml  install.ps1  install.sh  justfile  rustfmt.toml
.cargo/: config.toml
.deep/: history.json  plan.md
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  contributing.md  index.md  installation.md  token_optimization.md  tools.md
examples/: tui_prototype.rs
src/: cli.rs  config.rs  lib.rs  logger.rs  main.rs  models.rs  updater.rs  utils.rs  version.rs
src/agent/: agent.rs  commands.rs  context.rs  executor.rs  history.rs  mentions.rs  mod.rs  ops.rs  processor.rs  security.rs  types.rs
src/api/: client.rs  mod.rs  streaming.rs  types.rs
src/tools/: base.rs  code_ops.rs  file_io.rs  file_ops.rs  file_tools.rs  git_ops.rs  git_tools.rs  github_ops.rs  github_tools.rs  mod.rs  schemas.rs  system.rs  system_tools.rs  web_ops.rs  web_tools.rs
src/tools/file/: analysis.rs  diff.rs  mod.rs  navigation.rs  ops.rs  read_write.rs  refactor.rs
src/tools/file_io/: mod.rs  ops.rs  read_write.rs  search.rs
src/tools/schemas/: file_io.rs  git.rs  github.rs  mod.rs  system.rs  web.rs
src/tui/: app.rs  colorizer.rs  event_loop.rs  events.rs  highlight.rs  input.rs  keywords.rs  mod.rs  render.rs  spinner.rs  utils.rs
src/tui/colorizer/: highlighter.rs  mod.rs  types.rs  utils.rs
tests/: integration_test.rs
