[package]
name = "deepseek-rust-cli"
version = "1.11.3"
edition = "2021"
authors = ["Mahir Gul <mahirgul@gmail.com>"]
description = "A lightweight, high-speed autonomous CLI system agent port of DeepSeek CLI."
repository = "https://github.com/mahirgul/deepseek-rust-cli"
license = "MIT"
readme = "README.md"
keywords = ["cli", "ai", "deepseek", "agent", "assistant"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI & UI
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.28"
colored = "3.1"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "http2", "gzip", "brotli", "zstd"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# System Info & Operations
walkdir = "2.5"
glob = "0.3"
regex = "1.10"

# Git Operations
git2 = { version = "0.18", features = ["vendored-openssl"] }

# File Operations & Compression
sha2 = "0.10"
md5 = "0.7"

# HTML & Text Processing
html2text = "0.13"

# Utilities
uuid = { version = "1.7", features = ["v4"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
rayon = "1.10"
dashmap = "6.0"
arc-swap = "1.7"


# Base64
base64 = "0.22"

tokio-util = "0.7.18"
async-trait = "0.1.89"
once_cell = "1.21.4"
self_update = "0.44.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
pretty_assertions = "1.4"
